--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=LibraryManagement
+spring.application.name=project
+
+
+spring.datasource.username=root
+spring.datasource.password=cheese
+spring.datasource.url=jdbc:mysql://localhost:3306/JBDL_74_MINOR_PROJECT?createDatabaseIfNotExist=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.generated_statistics=true
+spring.jpa.hibernate.ddl-auto=create-drop
