--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=project
 spring.datasource.username=root
 spring.datasource.password=cheese
 spring.datasource.url=jdbc:mysql://localhost:3306/JBDL_74_MINOR_PROJECT?createDatabaseIfNotExist=true
+logging.level.root=INFO
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.generated_statistics=true
